--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # .env
 
 # OpenAi 的api key, 去 https://beta.openai.com/account/api-keys 中生成一个即可
-OPENAI_API_KEY='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'
+OPENAI_API_KEY=''
 
 # 第三方的暂时没用了，请使用上方的OPENAI_API_KEY
 # # =========================================
